完成gateway的二度开发，可以进行User的进一步开发